[package]
name = "rusty_chest"
version = "0.1.0"
authors = ["Jason Hall <111jasonhall@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.9.0"